--- a/translations/help.de.xlf
+++ b/translations/help.de.xlf
@@ -7976,5 +7976,14 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
         <target>Gebäudeverbesserung</target>
       </segment>
     </unit>
+    <unit id="FIL0rIm" name="Der Tod und die Berechnung der Seelepunkte">
+      <notes>
+        <note category="german">Der Tod und die Berechnung der Seelepunkte</note>
+      </notes>
+      <segment>
+        <source>Der Tod und die Berechnung der Seelepunkte</source>
+        <target>Der Tod und die Berechnung der Seelepunkte</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
