--- a/translations/global.de.xlf
+++ b/translations/global.de.xlf
@@ -2716,5 +2716,23 @@
         <target>via %group_inbox%</target>
       </segment>
     </unit>
+    <unit id="GiaI_3b" name="Überlebte Tage">
+      <notes>
+        <note category="german">Überlebte Tage</note>
+      </notes>
+      <segment>
+        <source>Überlebte Tage</source>
+        <target>Überlebte Tage</target>
+      </segment>
+    </unit>
+    <unit id="nQMCt.n" name="Abschiedsworte">
+      <notes>
+        <note category="german">Abschiedsworte</note>
+      </notes>
+      <segment>
+        <source>Abschiedsworte</source>
+        <target>Abschiedsworte</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
