--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -3187,5 +3187,23 @@
         <target>Empfänger</target>
       </segment>
     </unit>
+    <unit id="YC8wBlS" name="In diesem Abschnitt findest du alle bisher von dir gespielten Partien.">
+      <notes>
+        <note category="german">In diesem Abschnitt findest du alle bisher von dir gespielten Partien.</note>
+      </notes>
+      <segment>
+        <source>In diesem Abschnitt findest du alle bisher von dir gespielten Partien.</source>
+        <target> Esta es una lista de tus partidas jugadas.</target>
+      </segment>
+    </unit>
+    <unit id="P5HPUHF" name="Verlauf meiner Städte">
+      <notes>
+        <note category="german">Verlauf meiner Städte</note>
+      </notes>
+      <segment>
+        <source>Verlauf meiner Städte</source>
+        <target>Historial de mis partidas</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
