--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -736,7 +736,7 @@
       </notes>
       <segment>
         <source>Mithilfe des Wachturms kann die Stärke des nächtlichen Angriffs abgeschätzt werden. Je mehr Bürger sich an der Abschätzung beteiligen, desto genauer wird das Ergebnis.</source>
-        <target>La torre de vigilancia construida en el pueblo permite obtener una estimación del ataque de esta noche. La calidad del pronóstico depende directamente de la cantidad de habitantes que participen en él.</target>
+        <target><![CDATA[La torre de vigilancia construida en el pueblo permite obtener una estimación del ataque de esta noche. <strong>La calidad del pronóstico depende directamente de la cantidad de habitantes que participen en él</strong>.]]></target>
       </segment>
     </unit>
     <unit id="MVukZx5" name="Heutige Abschätzung">
