--- a/translations/items.de.xlf
+++ b/translations/items.de.xlf
@@ -8182,5 +8182,140 @@
         <target><![CDATA[So 'ne Quali bekommt man nicht jeden Tag in die Finger! Sicher, Übelkeit, Zittern und Schweißausbrüche hast du auch damit bekommen, aber die Wirkung ist weitaus stärker als bei 'ner normalen Droge (Du hast einen <strong>AP Bonus</strong> erhalten)... Übertreibe es aber nicht!]]></target>
       </segment>
     </unit>
+    <unit id="35qZHee" name="Deine Wunde wurde geheilt, zumindest oberflächlich...">
+      <notes>
+        <note category="german">Deine Wunde wurde geheilt, zumindest oberflächlich...</note>
+      </notes>
+      <segment>
+        <source>Deine Wunde wurde geheilt, zumindest oberflächlich...</source>
+        <target>Deine Wunde wurde geheilt, zumindest oberflächlich...</target>
+      </segment>
+    </unit>
+    <unit id="ndUWcPR" name="Deine unselige Infektion wurde kuriert!">
+      <notes>
+        <note category="german">Deine unselige Infektion wurde kuriert!</note>
+      </notes>
+      <segment>
+        <source>Deine unselige Infektion wurde kuriert!</source>
+        <target>Deine unselige Infektion wurde kuriert!</target>
+      </segment>
+    </unit>
+    <unit id="JAgvnnn" name="Du benötigst {items_required}.">
+      <notes>
+        <note category="german">Du benötigst {items_required}.</note>
+      </notes>
+      <segment>
+        <source>Du benötigst {items_required}.</source>
+        <target>Du benötigst {items_required}.</target>
+      </segment>
+    </unit>
+    <unit id="1LmNcmz">
+      <notes>
+        <note category="german">Kaum hast du deine Pille geschluckt, da verschwindet auch schon dein Durst. Hoffen wir mal, das alles gut geht...</note>
+      </notes>
+      <segment>
+        <source>Kaum hast du deine Pille geschluckt, da verschwindet auch schon dein Durst. Hoffen wir mal, das alles gut geht...</source>
+        <target>Kaum hast du deine Pille geschluckt, da verschwindet auch schon dein Durst. Hoffen wir mal, das alles gut geht...</target>
+      </segment>
+    </unit>
+    <unit id="izlHb1B">
+      <notes>
+        <note category="german">Verloren inmitten einer lächerlichen Menge sinnloser Dokumente hast du einen {item_to} entdeckt.</note>
+      </notes>
+      <segment>
+        <source>Verloren inmitten einer lächerlichen Menge sinnloser Dokumente hast du einen {item_to} entdeckt.</source>
+        <target>Versteckt inmitten einer lächerlichen Menge sinnloser Dokumente hast du einen {item_to} entdeckt.</target>
+      </segment>
+    </unit>
+    <unit id="f1JKU7Q" name="Hierfür brauchst du mindestens 1 CP.">
+      <notes>
+        <note category="german">Hierfür brauchst du mindestens 1 CP.</note>
+      </notes>
+      <segment>
+        <source>Hierfür brauchst du mindestens 1 CP.</source>
+        <target>Hierfür brauchst du mindestens 1 CP.</target>
+      </segment>
+    </unit>
+    <unit id="dydc.v9">
+      <notes>
+        <note category="german">Du hast ein(e) {item_from} mit einer(m) {item_tool} zerstört. In den Resten auf dem Boden findest du: {item_to}.</note>
+      </notes>
+      <segment>
+        <source>Du hast ein(e) {item_from} mit einer(m) {item_tool} zerstört. In den Resten auf dem Boden findest du: {item_to}.</source>
+        <target>Du hast ein(e) {item_from} mit einer(m) {item_tool} zerstört. In den Resten auf dem Boden findest du: {item_to}.</target>
+      </segment>
+    </unit>
+    <unit id="kXs8w7H" name="Du kannst diesen Gegenstand nur &lt;strong&gt;einmal am Tag&lt;/strong&gt; verwenden...">
+      <notes>
+        <note category="german">Du kannst diesen Gegenstand nur &lt;strong&gt;einmal am Tag&lt;/strong&gt; verwenden...</note>
+      </notes>
+      <segment>
+        <source>Du kannst diesen Gegenstand nur &lt;strong&gt;einmal am Tag&lt;/strong&gt; verwenden...</source>
+        <target><![CDATA[Du kannst diesen Gegenstand nur <strong>einmal am Tag</strong> verwenden...]]></target>
+      </segment>
+    </unit>
+    <unit id="et83IYx" name="So, zur Desinfektion nur noch draufspucken und hopp: Sieht wie neu aus!">
+      <notes>
+        <note category="german">So, zur Desinfektion nur noch draufspucken und hopp: Sieht wie neu aus!</note>
+      </notes>
+      <segment>
+        <source>So, zur Desinfektion nur noch draufspucken und hopp: Sieht wie neu aus!</source>
+        <target>So, zur Desinfektion nur noch draufspucken und hopp: Sieht wie neu aus!</target>
+      </segment>
+    </unit>
+    <unit id=".sG9vTq">
+      <notes>
+        <note category="german">Es geht doch nichts über einen schönen Stromstoß in die Wirbelsäule, um so richtig wach zu werden! Aber irgendwie riecht es jetzt hier nach verbranntem Fleisch...</note>
+      </notes>
+      <segment>
+        <source>Es geht doch nichts über einen schönen Stromstoß in die Wirbelsäule, um so richtig wach zu werden! Aber irgendwie riecht es jetzt hier nach verbranntem Fleisch...</source>
+        <target>Es geht doch nichts über einen schönen Stromstoß in die Wirbelsäule, um so richtig wach zu werden! Aber irgendwie riecht es jetzt hier nach verbranntem Fleisch...</target>
+      </segment>
+    </unit>
+    <unit id="S3AHAPf" name="Hierfür brauchst du mindestens 5 AP.">
+      <notes>
+        <note category="german">Hierfür brauchst du mindestens 5 AP.</note>
+      </notes>
+      <segment>
+        <source>Hierfür brauchst du mindestens 5 AP.</source>
+        <target>Hierfür brauchst du mindestens 5 AP.</target>
+      </segment>
+    </unit>
+    <unit id="793QxjT" name="Hierfür brauchst du mindestens 1 PM.">
+      <notes>
+        <note category="german">Hierfür brauchst du mindestens 1 PM.</note>
+      </notes>
+      <segment>
+        <source>Hierfür brauchst du mindestens 1 PM.</source>
+        <target>Hierfür brauchst du mindestens 1 MP.</target>
+      </segment>
+    </unit>
+    <unit id="42uqd50">
+      <notes>
+        <note category="german">Du schluckst das {item}... Nur ein paar Sekunden später ergreift dich die Panik... Kalte Schweißausbrüche, Paranoia... Du rollst dich zu einem Ball zusammen, außer Atem, und wartest darauf, dass die Wirkung nachlässt... aber das passiert nicht.&lt;hr /&gt;Du bist &lt;strong&gt;vor Angst erstarrt&lt;/strong&gt;.</note>
+      </notes>
+      <segment>
+        <source>Du schluckst das {item}... Nur ein paar Sekunden später ergreift dich die Panik... Kalte Schweißausbrüche, Paranoia... Du rollst dich zu einem Ball zusammen, außer Atem, und wartest darauf, dass die Wirkung nachlässt... aber das passiert nicht.&lt;hr /&gt;Du bist &lt;strong&gt;vor Angst erstarrt&lt;/strong&gt;.</source>
+        <target><![CDATA[Du schluckst das {item}... Nur ein paar Sekunden später ergreift dich die Panik... Kalte Schweißausbrüche, Paranoia... Du rollst dich zu einem Ball zusammen, außer Atem, und wartest darauf, dass die Wirkung nachlässt... aber das passiert nicht.<hr />Du bist <strong>vor Angst erstarrt</strong>.]]></target>
+      </segment>
+    </unit>
+    <unit id="3B3bDO.">
+      <notes>
+        <note category="german">Sofort bereust du, dieses {item} heruntergeschluckt zu haben... Das Produkt entpuppt sich als ein starkes Steroid für Tiere (die Art, die üblicherweise Pferden verabreicht wird). Deine APs wurden wiederhergestellt, aber du bist ab sofort &lt;strong&gt;drogenabhängig&lt;/strong&gt;!</note>
+      </notes>
+      <segment>
+        <source>Sofort bereust du, dieses {item} heruntergeschluckt zu haben... Das Produkt entpuppt sich als ein starkes Steroid für Tiere (die Art, die üblicherweise Pferden verabreicht wird). Deine APs wurden wiederhergestellt, aber du bist ab sofort &lt;strong&gt;drogenabhängig&lt;/strong&gt;!</source>
+        <target><![CDATA[Sofort bereust du, dieses {item} heruntergeschluckt zu haben... Das Produkt entpuppt sich als ein starkes Steroid für Tiere (die Art, die üblicherweise Pferden verabreicht wird). Deine APs wurden wiederhergestellt, aber du bist ab sofort <strong>drogenabhängig</strong>!]]></target>
+      </segment>
+    </unit>
+    <unit id="hh6kdGK">
+      <notes>
+        <note category="german">Du schluckst die {item} hinunter. Nach einigen Minuten beginnt dein Kopf zu pochen und deine Nase beginnt zu bluten. Der Schmerz ist nicht unerträglich, aber er ist ziemlich unangenehm...</note>
+      </notes>
+      <segment>
+        <source>Du schluckst die {item} hinunter. Nach einigen Minuten beginnt dein Kopf zu pochen und deine Nase beginnt zu bluten. Der Schmerz ist nicht unerträglich, aber er ist ziemlich unangenehm...</source>
+        <target>Du schluckst die {item} hinunter. Nach einigen Minuten beginnt dein Kopf zu pochen und deine Nase beginnt zu bluten. Der Schmerz ist nicht unerträglich, aber er ist ziemlich unangenehm...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
