--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19443,5 +19443,14 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Freilassen, um normalen Spielernamen zu verwenden.</target>
       </segment>
     </unit>
+    <unit id="G2mvpQw" name="Wir denken, der morgige Angriff wird ungefähr folgendermaßen aussehen:">
+      <notes>
+        <note category="german">Wir denken, der morgige Angriff wird ungefähr folgendermaßen aussehen:</note>
+      </notes>
+      <segment>
+        <source>Wir denken, der morgige Angriff wird ungefähr folgendermaßen aussehen:</source>
+        <target>Wir denken, der morgige Angriff wird ungefähr folgendermaßen aussehen:</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
