FR Translation for e-ruin tab name

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19487,7 +19487,7 @@
       </notes>
       <segment>
         <source>Erforschung einer beengten Ruine in erstickender Atmosphäre</source>
-        <target>Erforschung einer beengten Ruine in erstickender Atmosphäre</target>
+        <target>En exploration dans les dédales d'une ruine, dans un environnement exiguë et étouffant</target>
       </segment>
     </unit>
   </file>
