--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19458,7 +19458,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Erforschung einer beengten Ruine in erstickender Atmosphäre</source>
-        <target>Erforschung einer beengten Ruine in erstickender Atmosphäre</target>
+        <target>Exploring a cramped ruin, surrounded by a suffocating environment</target>
       </segment>
     </unit>
   </file>
