ES Translation for e-ruin tab name

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -19452,7 +19452,7 @@
       </notes>
       <segment>
         <source>Erforschung einer beengten Ruine in erstickender Atmosphäre</source>
-        <target>Erforschung einer beengten Ruine in erstickender Atmosphäre</target>
+        <target>Explorando una ruina abarrotada, rodeada por un ambiente sofocante</target>
       </segment>
     </unit>
   </file>
